k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/ceanders/undertow-servlet-s2i'
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"undertow-servlet-s-2-i:latest","namespace":"undertow-servlet-s2i"},"fieldPath":"spec.template.spec.containers[?(@.name==\"undertow-servlet-s-2-i\")].image","pause":"false"}]
    openshift.io/generated-by: OpenShiftWebConsole
  name: undertow-servlet-s-2-i
  labels:
    app: undertow-servlet-s-2-i
    app.kubernetes.io/component: undertow-servlet-s-2-i
    app.kubernetes.io/instance: undertow-servlet-s-2-i
    app.kubernetes.io/name: undertow-servlet-s-2-i
    app.kubernetes.io/part-of: undertow-servlet-s-2-i-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
spec:
  replicas: 100
  selector:
    matchLabels:
      app: undertow-servlet-s-2-i
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: undertow-servlet-s-2-i
        deploymentconfig: undertow-servlet-s-2-i
    spec:
      containers:
        - name: undertow-servlet-s-2-i
          image: >-
            image-registry.openshift-image-registry.svc:5000/undertow-servlet-s2i/undertow-servlet-s-2-i:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources:
            requests:
              memory: "1Gi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
