k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: undertow-servlet-s-2-i
  labels:
    app: undertow-servlet-s-2-i
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    app: undertow-servlet-s-2-i
  type: ClusterIP
  sessionAffinity: None
